fixing white spaces

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 .intro {
 	width: 55%;
 	margin: auto;
-	padding-top: 75px;
+	padding-top: 115px;
 	line-height: 190%;
 }
 
@@ -204,7 +204,7 @@ body {
 .first_page_body {
 	width: 55%;
 	margin: auto;
-	padding-top: 30px;
+	padding-top: 55px;
 }
 
 /*################   SECOND SUB   ####################*/
